parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BREAK
    CASE
    COLON
    CONTINUE
    DEFAULT
    DIVEQUALS
    ELLIPSIS
    ELSE
    FLOAT
    FOR
    FROM
    IF
    INT
    INTEGRATE
    LBRACE
    LBRACKET
    MINUSEQUALS
    MULEQUALS
    NOT
    OR
    PERIOD
    PLUSEQUALS
    RBRACE
    RBRACKET
    RETURN
    STRING
    SWITCH
    TO
    TYPE
    WHILE

Grammar

Rule 0     S' -> line_statement
Rule 1     line_statement -> statement_list SEMICOLON
Rule 2     decl_statement -> LET IDENTIFIER EQUALS expression
Rule 3     decl_statement -> LET IDENTIFIER
Rule 4     decl_statement -> IDENTIFIER EQUALS expression
Rule 5     statement_list -> statement
Rule 6     statement_list -> decl_statement
Rule 7     statement_list -> statement_list SEMICOLON statement
Rule 8     statement_list -> statement_list SEMICOLON decl_statement
Rule 9     statement -> PRINT LPAREN expr_list RPAREN
Rule 10    expression -> TRUE
Rule 11    expression -> FALSE
Rule 12    expression -> IDENTIFIER
Rule 13    expression -> FLOATCONST
Rule 14    expression -> INTCONST
Rule 15    expression -> STRINGCONST
Rule 16    expression -> MINUS expression
Rule 17    expression -> expression PLUS expression
Rule 18    expression -> expression MINUS expression
Rule 19    expression -> expression MUL expression
Rule 20    expression -> expression DIV expression
Rule 21    expression -> expression MOD expression
Rule 22    expression -> expression POW expression
Rule 23    expression -> expression GT expression
Rule 24    expression -> expression GE expression
Rule 25    expression -> expression LT expression
Rule 26    expression -> expression LE expression
Rule 27    expression -> expression EQ expression
Rule 28    expression -> expression NE expression
Rule 29    expression -> IDENTIFIER PLUSPLUS
Rule 30    expression -> IDENTIFIER MINUSMINUS
Rule 31    expr_list -> expression
Rule 32    expr_list -> expr_list COMMA expression
Rule 33    expression -> LPAREN expression RPAREN
Rule 34    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
BREAK                : 
CASE                 : 
COLON                : 
COMMA                : 32
CONTINUE             : 
DEFAULT              : 
DIV                  : 20
DIVEQUALS            : 
ELLIPSIS             : 
ELSE                 : 
EQ                   : 27
EQUALS               : 2 4
FALSE                : 11
FLOAT                : 
FLOATCONST           : 13
FOR                  : 
FROM                 : 
GE                   : 24
GT                   : 23
IDENTIFIER           : 2 3 4 12 29 30
IF                   : 
INT                  : 
INTCONST             : 14
INTEGRATE            : 
LBRACE               : 
LBRACKET             : 
LE                   : 26
LET                  : 2 3
LPAREN               : 9 33
LT                   : 25
MINUS                : 16 18
MINUSEQUALS          : 
MINUSMINUS           : 30
MOD                  : 21
MUL                  : 19
MULEQUALS            : 
NE                   : 28
NOT                  : 
OR                   : 
PERIOD               : 
PLUS                 : 17
PLUSEQUALS           : 
PLUSPLUS             : 29
POW                  : 22
PRINT                : 9
RBRACE               : 
RBRACKET             : 
RETURN               : 
RPAREN               : 9 33
SEMICOLON            : 1 7 8
STRING               : 
STRINGCONST          : 15
SWITCH               : 
TO                   : 
TRUE                 : 10
TYPE                 : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

decl_statement       : 6 8
empty                : 
expr_list            : 9 32
expression           : 2 4 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 31 32 33
line_statement       : 0
statement            : 5 7
statement_list       : 1 7 8

Parsing method: LALR

state 0

    (0) S' -> . line_statement
    (1) line_statement -> . statement_list SEMICOLON
    (5) statement_list -> . statement
    (6) statement_list -> . decl_statement
    (7) statement_list -> . statement_list SEMICOLON statement
    (8) statement_list -> . statement_list SEMICOLON decl_statement
    (9) statement -> . PRINT LPAREN expr_list RPAREN
    (2) decl_statement -> . LET IDENTIFIER EQUALS expression
    (3) decl_statement -> . LET IDENTIFIER
    (4) decl_statement -> . IDENTIFIER EQUALS expression

    PRINT           shift and go to state 5
    LET             shift and go to state 6
    IDENTIFIER      shift and go to state 7

    line_statement                 shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    decl_statement                 shift and go to state 4

state 1

    (0) S' -> line_statement .



state 2

    (1) line_statement -> statement_list . SEMICOLON
    (7) statement_list -> statement_list . SEMICOLON statement
    (8) statement_list -> statement_list . SEMICOLON decl_statement

    SEMICOLON       shift and go to state 8


state 3

    (5) statement_list -> statement .

    SEMICOLON       reduce using rule 5 (statement_list -> statement .)


state 4

    (6) statement_list -> decl_statement .

    SEMICOLON       reduce using rule 6 (statement_list -> decl_statement .)


state 5

    (9) statement -> PRINT . LPAREN expr_list RPAREN

    LPAREN          shift and go to state 9


state 6

    (2) decl_statement -> LET . IDENTIFIER EQUALS expression
    (3) decl_statement -> LET . IDENTIFIER

    IDENTIFIER      shift and go to state 10


state 7

    (4) decl_statement -> IDENTIFIER . EQUALS expression

    EQUALS          shift and go to state 11


state 8

    (1) line_statement -> statement_list SEMICOLON .
    (7) statement_list -> statement_list SEMICOLON . statement
    (8) statement_list -> statement_list SEMICOLON . decl_statement
    (9) statement -> . PRINT LPAREN expr_list RPAREN
    (2) decl_statement -> . LET IDENTIFIER EQUALS expression
    (3) decl_statement -> . LET IDENTIFIER
    (4) decl_statement -> . IDENTIFIER EQUALS expression

    $end            reduce using rule 1 (line_statement -> statement_list SEMICOLON .)
    PRINT           shift and go to state 5
    LET             shift and go to state 6
    IDENTIFIER      shift and go to state 7

    statement                      shift and go to state 12
    decl_statement                 shift and go to state 13

state 9

    (9) statement -> PRINT LPAREN . expr_list RPAREN
    (31) expr_list -> . expression
    (32) expr_list -> . expr_list COMMA expression
    (10) expression -> . TRUE
    (11) expression -> . FALSE
    (12) expression -> . IDENTIFIER
    (13) expression -> . FLOATCONST
    (14) expression -> . INTCONST
    (15) expression -> . STRINGCONST
    (16) expression -> . MINUS expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MUL expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression MOD expression
    (22) expression -> . expression POW expression
    (23) expression -> . expression GT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NE expression
    (29) expression -> . IDENTIFIER PLUSPLUS
    (30) expression -> . IDENTIFIER MINUSMINUS
    (33) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    FLOATCONST      shift and go to state 20
    INTCONST        shift and go to state 21
    STRINGCONST     shift and go to state 22
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 14

    expr_list                      shift and go to state 15
    expression                     shift and go to state 16

state 10

    (2) decl_statement -> LET IDENTIFIER . EQUALS expression
    (3) decl_statement -> LET IDENTIFIER .

    EQUALS          shift and go to state 24
    SEMICOLON       reduce using rule 3 (decl_statement -> LET IDENTIFIER .)


state 11

    (4) decl_statement -> IDENTIFIER EQUALS . expression
    (10) expression -> . TRUE
    (11) expression -> . FALSE
    (12) expression -> . IDENTIFIER
    (13) expression -> . FLOATCONST
    (14) expression -> . INTCONST
    (15) expression -> . STRINGCONST
    (16) expression -> . MINUS expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MUL expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression MOD expression
    (22) expression -> . expression POW expression
    (23) expression -> . expression GT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NE expression
    (29) expression -> . IDENTIFIER PLUSPLUS
    (30) expression -> . IDENTIFIER MINUSMINUS
    (33) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    FLOATCONST      shift and go to state 20
    INTCONST        shift and go to state 21
    STRINGCONST     shift and go to state 22
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 14

    expression                     shift and go to state 25

state 12

    (7) statement_list -> statement_list SEMICOLON statement .

    SEMICOLON       reduce using rule 7 (statement_list -> statement_list SEMICOLON statement .)


state 13

    (8) statement_list -> statement_list SEMICOLON decl_statement .

    SEMICOLON       reduce using rule 8 (statement_list -> statement_list SEMICOLON decl_statement .)


state 14

    (33) expression -> LPAREN . expression RPAREN
    (10) expression -> . TRUE
    (11) expression -> . FALSE
    (12) expression -> . IDENTIFIER
    (13) expression -> . FLOATCONST
    (14) expression -> . INTCONST
    (15) expression -> . STRINGCONST
    (16) expression -> . MINUS expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MUL expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression MOD expression
    (22) expression -> . expression POW expression
    (23) expression -> . expression GT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NE expression
    (29) expression -> . IDENTIFIER PLUSPLUS
    (30) expression -> . IDENTIFIER MINUSMINUS
    (33) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    FLOATCONST      shift and go to state 20
    INTCONST        shift and go to state 21
    STRINGCONST     shift and go to state 22
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 14

    expression                     shift and go to state 26

state 15

    (9) statement -> PRINT LPAREN expr_list . RPAREN
    (32) expr_list -> expr_list . COMMA expression

    RPAREN          shift and go to state 27
    COMMA           shift and go to state 28


state 16

    (31) expr_list -> expression .
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . MINUS expression
    (19) expression -> expression . MUL expression
    (20) expression -> expression . DIV expression
    (21) expression -> expression . MOD expression
    (22) expression -> expression . POW expression
    (23) expression -> expression . GT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . LE expression
    (27) expression -> expression . EQ expression
    (28) expression -> expression . NE expression

    RPAREN          reduce using rule 31 (expr_list -> expression .)
    COMMA           reduce using rule 31 (expr_list -> expression .)
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32
    MOD             shift and go to state 33
    POW             shift and go to state 34
    GT              shift and go to state 35
    GE              shift and go to state 36
    LT              shift and go to state 37
    LE              shift and go to state 38
    EQ              shift and go to state 39
    NE              shift and go to state 40


state 17

    (10) expression -> TRUE .

    PLUS            reduce using rule 10 (expression -> TRUE .)
    MINUS           reduce using rule 10 (expression -> TRUE .)
    MUL             reduce using rule 10 (expression -> TRUE .)
    DIV             reduce using rule 10 (expression -> TRUE .)
    MOD             reduce using rule 10 (expression -> TRUE .)
    POW             reduce using rule 10 (expression -> TRUE .)
    GT              reduce using rule 10 (expression -> TRUE .)
    GE              reduce using rule 10 (expression -> TRUE .)
    LT              reduce using rule 10 (expression -> TRUE .)
    LE              reduce using rule 10 (expression -> TRUE .)
    EQ              reduce using rule 10 (expression -> TRUE .)
    NE              reduce using rule 10 (expression -> TRUE .)
    RPAREN          reduce using rule 10 (expression -> TRUE .)
    COMMA           reduce using rule 10 (expression -> TRUE .)
    SEMICOLON       reduce using rule 10 (expression -> TRUE .)


state 18

    (11) expression -> FALSE .

    PLUS            reduce using rule 11 (expression -> FALSE .)
    MINUS           reduce using rule 11 (expression -> FALSE .)
    MUL             reduce using rule 11 (expression -> FALSE .)
    DIV             reduce using rule 11 (expression -> FALSE .)
    MOD             reduce using rule 11 (expression -> FALSE .)
    POW             reduce using rule 11 (expression -> FALSE .)
    GT              reduce using rule 11 (expression -> FALSE .)
    GE              reduce using rule 11 (expression -> FALSE .)
    LT              reduce using rule 11 (expression -> FALSE .)
    LE              reduce using rule 11 (expression -> FALSE .)
    EQ              reduce using rule 11 (expression -> FALSE .)
    NE              reduce using rule 11 (expression -> FALSE .)
    RPAREN          reduce using rule 11 (expression -> FALSE .)
    COMMA           reduce using rule 11 (expression -> FALSE .)
    SEMICOLON       reduce using rule 11 (expression -> FALSE .)


state 19

    (12) expression -> IDENTIFIER .
    (29) expression -> IDENTIFIER . PLUSPLUS
    (30) expression -> IDENTIFIER . MINUSMINUS

    PLUS            reduce using rule 12 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 12 (expression -> IDENTIFIER .)
    MUL             reduce using rule 12 (expression -> IDENTIFIER .)
    DIV             reduce using rule 12 (expression -> IDENTIFIER .)
    MOD             reduce using rule 12 (expression -> IDENTIFIER .)
    POW             reduce using rule 12 (expression -> IDENTIFIER .)
    GT              reduce using rule 12 (expression -> IDENTIFIER .)
    GE              reduce using rule 12 (expression -> IDENTIFIER .)
    LT              reduce using rule 12 (expression -> IDENTIFIER .)
    LE              reduce using rule 12 (expression -> IDENTIFIER .)
    EQ              reduce using rule 12 (expression -> IDENTIFIER .)
    NE              reduce using rule 12 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 12 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 12 (expression -> IDENTIFIER .)
    SEMICOLON       reduce using rule 12 (expression -> IDENTIFIER .)
    PLUSPLUS        shift and go to state 41
    MINUSMINUS      shift and go to state 42


state 20

    (13) expression -> FLOATCONST .

    PLUS            reduce using rule 13 (expression -> FLOATCONST .)
    MINUS           reduce using rule 13 (expression -> FLOATCONST .)
    MUL             reduce using rule 13 (expression -> FLOATCONST .)
    DIV             reduce using rule 13 (expression -> FLOATCONST .)
    MOD             reduce using rule 13 (expression -> FLOATCONST .)
    POW             reduce using rule 13 (expression -> FLOATCONST .)
    GT              reduce using rule 13 (expression -> FLOATCONST .)
    GE              reduce using rule 13 (expression -> FLOATCONST .)
    LT              reduce using rule 13 (expression -> FLOATCONST .)
    LE              reduce using rule 13 (expression -> FLOATCONST .)
    EQ              reduce using rule 13 (expression -> FLOATCONST .)
    NE              reduce using rule 13 (expression -> FLOATCONST .)
    RPAREN          reduce using rule 13 (expression -> FLOATCONST .)
    COMMA           reduce using rule 13 (expression -> FLOATCONST .)
    SEMICOLON       reduce using rule 13 (expression -> FLOATCONST .)


state 21

    (14) expression -> INTCONST .

    PLUS            reduce using rule 14 (expression -> INTCONST .)
    MINUS           reduce using rule 14 (expression -> INTCONST .)
    MUL             reduce using rule 14 (expression -> INTCONST .)
    DIV             reduce using rule 14 (expression -> INTCONST .)
    MOD             reduce using rule 14 (expression -> INTCONST .)
    POW             reduce using rule 14 (expression -> INTCONST .)
    GT              reduce using rule 14 (expression -> INTCONST .)
    GE              reduce using rule 14 (expression -> INTCONST .)
    LT              reduce using rule 14 (expression -> INTCONST .)
    LE              reduce using rule 14 (expression -> INTCONST .)
    EQ              reduce using rule 14 (expression -> INTCONST .)
    NE              reduce using rule 14 (expression -> INTCONST .)
    RPAREN          reduce using rule 14 (expression -> INTCONST .)
    COMMA           reduce using rule 14 (expression -> INTCONST .)
    SEMICOLON       reduce using rule 14 (expression -> INTCONST .)


state 22

    (15) expression -> STRINGCONST .

    PLUS            reduce using rule 15 (expression -> STRINGCONST .)
    MINUS           reduce using rule 15 (expression -> STRINGCONST .)
    MUL             reduce using rule 15 (expression -> STRINGCONST .)
    DIV             reduce using rule 15 (expression -> STRINGCONST .)
    MOD             reduce using rule 15 (expression -> STRINGCONST .)
    POW             reduce using rule 15 (expression -> STRINGCONST .)
    GT              reduce using rule 15 (expression -> STRINGCONST .)
    GE              reduce using rule 15 (expression -> STRINGCONST .)
    LT              reduce using rule 15 (expression -> STRINGCONST .)
    LE              reduce using rule 15 (expression -> STRINGCONST .)
    EQ              reduce using rule 15 (expression -> STRINGCONST .)
    NE              reduce using rule 15 (expression -> STRINGCONST .)
    RPAREN          reduce using rule 15 (expression -> STRINGCONST .)
    COMMA           reduce using rule 15 (expression -> STRINGCONST .)
    SEMICOLON       reduce using rule 15 (expression -> STRINGCONST .)


state 23

    (16) expression -> MINUS . expression
    (10) expression -> . TRUE
    (11) expression -> . FALSE
    (12) expression -> . IDENTIFIER
    (13) expression -> . FLOATCONST
    (14) expression -> . INTCONST
    (15) expression -> . STRINGCONST
    (16) expression -> . MINUS expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MUL expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression MOD expression
    (22) expression -> . expression POW expression
    (23) expression -> . expression GT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NE expression
    (29) expression -> . IDENTIFIER PLUSPLUS
    (30) expression -> . IDENTIFIER MINUSMINUS
    (33) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    FLOATCONST      shift and go to state 20
    INTCONST        shift and go to state 21
    STRINGCONST     shift and go to state 22
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 14

    expression                     shift and go to state 43

state 24

    (2) decl_statement -> LET IDENTIFIER EQUALS . expression
    (10) expression -> . TRUE
    (11) expression -> . FALSE
    (12) expression -> . IDENTIFIER
    (13) expression -> . FLOATCONST
    (14) expression -> . INTCONST
    (15) expression -> . STRINGCONST
    (16) expression -> . MINUS expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MUL expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression MOD expression
    (22) expression -> . expression POW expression
    (23) expression -> . expression GT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NE expression
    (29) expression -> . IDENTIFIER PLUSPLUS
    (30) expression -> . IDENTIFIER MINUSMINUS
    (33) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    FLOATCONST      shift and go to state 20
    INTCONST        shift and go to state 21
    STRINGCONST     shift and go to state 22
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 14

    expression                     shift and go to state 44

state 25

    (4) decl_statement -> IDENTIFIER EQUALS expression .
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . MINUS expression
    (19) expression -> expression . MUL expression
    (20) expression -> expression . DIV expression
    (21) expression -> expression . MOD expression
    (22) expression -> expression . POW expression
    (23) expression -> expression . GT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . LE expression
    (27) expression -> expression . EQ expression
    (28) expression -> expression . NE expression

    SEMICOLON       reduce using rule 4 (decl_statement -> IDENTIFIER EQUALS expression .)
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32
    MOD             shift and go to state 33
    POW             shift and go to state 34
    GT              shift and go to state 35
    GE              shift and go to state 36
    LT              shift and go to state 37
    LE              shift and go to state 38
    EQ              shift and go to state 39
    NE              shift and go to state 40


state 26

    (33) expression -> LPAREN expression . RPAREN
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . MINUS expression
    (19) expression -> expression . MUL expression
    (20) expression -> expression . DIV expression
    (21) expression -> expression . MOD expression
    (22) expression -> expression . POW expression
    (23) expression -> expression . GT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . LE expression
    (27) expression -> expression . EQ expression
    (28) expression -> expression . NE expression

    RPAREN          shift and go to state 45
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    MUL             shift and go to state 31
    DIV             shift and go to state 32
    MOD             shift and go to state 33
    POW             shift and go to state 34
    GT              shift and go to state 35
    GE              shift and go to state 36
    LT              shift and go to state 37
    LE              shift and go to state 38
    EQ              shift and go to state 39
    NE              shift and go to state 40


state 27

    (9) statement -> PRINT LPAREN expr_list RPAREN .

    SEMICOLON       reduce using rule 9 (statement -> PRINT LPAREN expr_list RPAREN .)


state 28

    (32) expr_list -> expr_list COMMA . expression
    (10) expression -> . TRUE
    (11) expression -> . FALSE
    (12) expression -> . IDENTIFIER
    (13) expression -> . FLOATCONST
    (14) expression -> . INTCONST
    (15) expression -> . STRINGCONST
    (16) expression -> . MINUS expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MUL expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression MOD expression
    (22) expression -> . expression POW expression
    (23) expression -> . expression GT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NE expression
    (29) expression -> . IDENTIFIER PLUSPLUS
    (30) expression -> . IDENTIFIER MINUSMINUS
    (33) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    FLOATCONST      shift and go to state 20
    INTCONST        shift and go to state 21
    STRINGCONST     shift and go to state 22
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 14

    expression                     shift and go to state 46

state 29

    (17) expression -> expression PLUS . expression
    (10) expression -> . TRUE
    (11) expression -> . FALSE
    (12) expression -> . IDENTIFIER
    (13) expression -> . FLOATCONST
    (14) expression -> . INTCONST
    (15) expression -> . STRINGCONST
    (16) expression -> . MINUS expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MUL expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression MOD expression
    (22) expression -> . expression POW expression
    (23) expression -> . expression GT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NE expression
    (29) expression -> . IDENTIFIER PLUSPLUS
    (30) expression -> . IDENTIFIER MINUSMINUS
    (33) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    FLOATCONST      shift and go to state 20
    INTCONST        shift and go to state 21
    STRINGCONST     shift and go to state 22
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 14

    expression                     shift and go to state 47

state 30

    (18) expression -> expression MINUS . expression
    (10) expression -> . TRUE
    (11) expression -> . FALSE
    (12) expression -> . IDENTIFIER
    (13) expression -> . FLOATCONST
    (14) expression -> . INTCONST
    (15) expression -> . STRINGCONST
    (16) expression -> . MINUS expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MUL expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression MOD expression
    (22) expression -> . expression POW expression
    (23) expression -> . expression GT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NE expression
    (29) expression -> . IDENTIFIER PLUSPLUS
    (30) expression -> . IDENTIFIER MINUSMINUS
    (33) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    FLOATCONST      shift and go to state 20
    INTCONST        shift and go to state 21
    STRINGCONST     shift and go to state 22
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 14

    expression                     shift and go to state 48

state 31

    (19) expression -> expression MUL . expression
    (10) expression -> . TRUE
    (11) expression -> . FALSE
    (12) expression -> . IDENTIFIER
    (13) expression -> . FLOATCONST
    (14) expression -> . INTCONST
    (15) expression -> . STRINGCONST
    (16) expression -> . MINUS expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression MUL expression
    (20) expression -> . expression DIV expression
    (21) expression -> . expression MOD expression
    (22) expression -> . expression POW expression
    (23) expression -> . expression GT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression EQ expression
    (28) expression -> . expression NE expression
    (29) expression -> . IDENTIFIER PLUSPLUS
    (30) expression -> . IDENTIFIER MINUSMINUS
    (33) expression -> . LPAREN expression RPAREN

    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    IDENTIFIER      shift and go to state 19
    FLOATCONST      shift and go to state 20
    INTCONST        shift and go to state 21
    STRINGCONST     shift and go to state 22
    MINUS           shift and go to state 23
    LPAREN          shift and go to state 14

    expression                     shift and go to state 49

state 32
